--- a/.github/workflows/compile_docs.yml
+++ b/.github/workflows/compile_docs.yml
@@ -9,7 +9,7 @@ env:
   EM_CACHE_FOLDER: 'emsdk-cache'
 jobs:
   build-and-deploy:
-    if: github.repository == 'lvgl/lvgl'
+    if: github.repository == 'faruq-zhao/lvgl'
     runs-on: ubuntu-22.04
     concurrency: docs-build-and-deploy
     steps:
@@ -67,23 +67,23 @@ jobs:
       - name: Deploy to subfolder
         uses: JamesIves/github-pages-deploy-action@v4.6.0
         with:
-          token: ${{ secrets.LVGL_BOT_TOKEN }}
-          repository-name: lvgl/docs
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository-name: faruq-zhao/lvgl
           branch: gh-pages # The branch the action should deploy to.
           folder: out_html  # The folder the action should deploy.
           target-folder: ${{ steps.version.outputs.VERSION_NAME }}
-          git-config-name: lvgl-bot
-          git-config-email: lvgl-bot@users.noreply.github.com
-          single-commit: true
-      - name: Deploy to master
-        if: github.ref == 'refs/heads/master'
-        uses: JamesIves/github-pages-deploy-action@v4.6.0
-        with:
-          token: ${{ secrets.LVGL_BOT_TOKEN }}
-          repository-name: lvgl/docs
-          branch: gh-pages # The branch the action should deploy to.
-          folder: out_html  # The folder the action should deploy.
-          target-folder: master
-          git-config-name: lvgl-bot
-          git-config-email: lvgl-bot@users.noreply.github.com
+          git-config-name: faruq-zhao
+          git-config-email: zhao@faruq.top
           commit: true
+      # - name: Deploy to master
+      #   if: github.ref == 'refs/heads/master'
+      #   uses: JamesIves/github-pages-deploy-action@v4.6.0
+      #   with:
+      #     token: ${{ secrets.LVGL_BOT_TOKEN }}
+      #     repository-name: lvgl/docs
+      #     branch: gh-pages # The branch the action should deploy to.
+      #     folder: out_html  # The folder the action should deploy.
+      #     target-folder: master
+      #     git-config-name: lvgl-bot
+      #     git-config-email: lvgl-bot@users.noreply.github.com
+      #     commit: true
